--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -17,6 +17,20 @@
 
 /* --- Custom Overrides --- */
 
+.banner {
+    height:24px;       /* Height of the banner */
+    position: sticky;   /* Follows as you scroll */
+    width: 100%;
+    z-index: 1;         /* Tells the renderer "this is important", otherwise Admonition and Code Blocks will render into it */
+    text-align: center;
+    color:  #fafaf9;
+    background-color: #292524;
+}
+
+.md-header {
+    top: 12px;          /* This setting prevents the Material header from imposing into the space of the banner! */
+}
+
 /* Parallax Container */
 .parallax-container {
   overflow-x: hidden;
