--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -18,8 +18,8 @@
 /* --- Custom Overrides --- */
 
 .banner {
-    height:24px;       /* Height of the banner */
-    position: sticky;   /* Follows as you scroll */
+    height: 20px;        /* Height of the banner */
+    position: fixed;   /* Follows as you scroll */
     width: 100%;
     z-index: 1;         /* Tells the renderer "this is important", otherwise Admonition and Code Blocks will render into it */
     text-align: center;
@@ -28,7 +28,7 @@
 }
 
 .md-header {
-    top: 12px;          /* This setting prevents the Material header from imposing into the space of the banner! */
+    top: 20px;          /* This setting prevents the Material header from imposing into the space of the banner! */
 }
 
 /* Parallax Container */
